{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 14,
  "lineage": "16a9a387-287b-362d-123f-23fa4596c11b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkInterfaces/dev-web-vm-nic-xwp",
            "internal_domain_name_suffix": "kxpc2lw4mlsebda4wrtyff4mhe.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-vm-ip-1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/publicIPAddresses/dev-web-vm-publicip-xwp",
                "subnet_id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/virtualNetworks/dev-vnet-xwp/subnets/dev-vnet-xwp-default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "name": "dev-web-vm-nic-xwp",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "dev-terraform-vm-xwp"
          },
          "dependencies": [
            "azurerm_public_ip.web_vm_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg",
            "location": "canadacentral",
            "name": "dev-vnet-xwp-default-nsg",
            "resource_group_name": "dev-terraform-vm-xwp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "dev-vnet-xwp-default-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dev-terraform-vm-xwp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "dev-vnet-xwp-default-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "dev-terraform-vm-xwp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "dev-vnet-xwp-default-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "dev-terraform-vm-xwp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8501",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg/securityRules/Rule-Port-8501",
            "name": "Rule-Port-8501",
            "network_security_group_name": "dev-vnet-xwp-default-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "dev-terraform-vm-xwp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_vm_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "app1-vm-xwp",
            "fqdn": "app1-vm-xwp.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/publicIPAddresses/dev-web-vm-publicip-xwp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.206.140.115",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "dev-web-vm-publicip-xwp",
            "resource_group_name": "dev-terraform-vm-xwp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/virtualNetworks/dev-vnet-xwp/subnets/dev-vnet-xwp-default",
            "name": "dev-vnet-xwp-default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-terraform-vm-xwp",
            "virtual_network_name": "dev-vnet-xwp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/virtualNetworks/dev-vnet-xwp/subnets/dev-vnet-xwp-default",
            "network_security_group_id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/networkSecurityGroups/dev-vnet-xwp-default-nsg",
            "subnet_id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/virtualNetworks/dev-vnet-xwp/subnets/dev-vnet-xwp-default"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2e2ede55-62de-40e4-8c1e-b4678297cc3c",
            "id": "/subscriptions/bcb97d93-5dab-4518-8e09-8c6c473a8de4/resourceGroups/dev-terraform-vm-xwp/providers/Microsoft.Network/virtualNetworks/dev-vnet-xwp",
            "location": "canadacentral",
            "name": "dev-vnet-xwp",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "dev-terraform-vm-xwp",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}